--- a/app/views/targets/index.html.haml
+++ b/app/views/targets/index.html.haml
@@ -2,5 +2,5 @@
 %p Select menu below.
 
 -# TODO それぞれのモデルのクラスメソッドで名称を返すようにするか、Yaml 使う。モデル作るときに決める
-- %w(LT food sake).each do |target|
+- %w(LT FOOD SAKE).each do |target|
   = link_to "vote #{target}", new_vote_path
