--- a/app/views/votes/new.html.haml
+++ b/app/views/votes/new.html.haml
@@ -1,4 +1,7 @@
 %h1 new vote
+%div
+  -# TODO 'target' の部分はクラスメソッドとか使って文字列展開したい(LT, SAKE, FOOD)
+  Select the target, and push the vote button!
 
 = render 'form', button_label: 'vote'
 
