--- a/app/views/results/show.html.haml
+++ b/app/views/results/show.html.haml
@@ -1,2 +1,6 @@
-%h1 Results#show
-%p Find me in app/views/results/show.html.haml
+%h1 Comments for 人の名前
+-#NOTE ここに ivar が渡ってくるときには、既にそのひとのためのコメントだけになってる。
+%div
+  - @votes.each do |vote|
+    %div
+      = vote.comment
