--- a/app/views/results/index.html.haml
+++ b/app/views/results/index.html.haml
@@ -1,7 +1,7 @@
 %h1 #{@type} result
-%div
+.votes
   - @votes.each do |key, vote|
-    %div
+    .vote
       =#XXX: VoteTarget.find(key) って連続してるのがカッコわるい。
       = link_to "#{vote.count}票 #{VoteTarget.find(key).title}", result_path(VoteTarget.find(key))
 
