--- a/app/views/result_targets/index.html.haml
+++ b/app/views/result_targets/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Result menu
 %p Select the target below.
 
--# TODO それぞれのモデルのクラスメソッドで名称を返すようにするか、Yaml 使う。モデル作るときに決める
+-#TODO i18n 対応をいつかやる
 - %w(Lt Sake Food).each do |target|
   = link_to "show #{target}", results_path(target_type: target)
