--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,8 @@
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          - text = fa_icon(:beer, text: "Tokyu08 - #{current_user.nickname}")
+          - name = current_user ? " - #{current_user.nickname}" : ""
+          - text = fa_icon(:beer, text: "Tokyu08#{name}")
           = link_to text, root_path, class: 'navbar-brand'
         .navbar-collapse.collapse.navbar-right
           %ul.nav.navbar-nav
