Do not render when vote comment does not exist

--- a/app/views/results/show.html.haml
+++ b/app/views/results/show.html.haml
@@ -2,5 +2,6 @@
 
 %table.table
   - @votes.each do |vote|
-    %tr
-      %td= vote.comment
+    - if vote.comment.present?
+      %tr
+        %td= vote.comment
