--- a/app/views/votes/show.html.haml
+++ b/app/views/votes/show.html.haml
@@ -5,7 +5,7 @@
 %table.table
   %tr
     %th タイトル
-    %td= @vote.target.title
+    %td= @vote.target.title_and_nickname
   %tr
     %th コメント
     %td= @vote.comment
